// Copyright Materialize, Inc. and contributors. All rights reserved.
//
// Use of this software is governed by the Business Source License
// included in the LICENSE file.
//
// As of the Change Date specified in that file, in accordance with
// the Business Source License, use of this software will be governed
// by the Apache License, Version 2.0.

syntax = "proto3";

package mz_postgres_util.desc;

message ProtoPostgresTableDesc {
    string name = 1;
    string namespace = 2;
    uint32 oid = 3;
    repeated ProtoPostgresColumnDesc columns = 4;
}

message ProtoPostgresColumnDesc {
    string name = 1;
    uint32 type_oid = 2;
    int32 type_mod = 3;
    bool nullable = 4;
    bool primary_key = 5;
    // TODO(migration): remove optional in v0.48
    optional uint32 col_num = 6;
}
